--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <title>Weather Dashboard</title>
+    <link rel="stylesheet" href="style.css">
+        <title>Weather Dashboard</title>
 </head>
 
 <body>
@@ -32,7 +33,7 @@
                 <div>
                     <!--Unordered list for cities that are typed into search box-->
                     <ul id="cityList"></ul>
-                    <!--Each city that is searched is turned into a button and added as list items under each-->
+                    <!--Each city that is searched is turned into a button (or list item) and added as list items under each-->
                 </div>
             </div>
 
@@ -45,6 +46,7 @@
                     <p class="fahrenheit"></p>
                     <p class="humidity"></p>
                     <p class="windSpeed"></p>
+                    <div id="uvIndexID"></div>
                     <!-- <p class="uvIndex"></p> -->
                 </div>
             </div>
